--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 
     </main>
 
-    <!-- website footer -->
+    <!-- website footer: has a image in center-->
     <footer>
+        <!-- image -->
+        <img src="ballerini.svg" alt="">
 
     </footer>
     
