--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
                 <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito mais fácil!</h2>
-                <button class="conteudo-principal-escrito-botao">Me adicione</button>
+                <button class="conteudo-principal-escrito-botao">Me adicione!</button>
         
             </div>
 
